# hancat-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml  release.yml
examples/: example.c
include/: hancat.h
scripts/: build-android.sh  build-ios.sh
src/: lib.rs
