[package]
name = "hancat-ffi"
version = "0.8.0"
edition = "2024"
description = "C FFI bindings for hancat-core - Korean text processing (postposition + verb conjugation)"
license = "MIT"
repository = "https://github.com/tossicat/hancat-ffi"
keywords = ["korean", "nlp", "ffi", "c", "conjugation"]
categories = ["localization", "text-processing"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
grade-a = ["hancat-core/grade-a"]
grade-b = ["hancat-core/grade-b"]

[dependencies]
hancat-core = "0.8"

[build-dependencies]
cbindgen = "0.29"
